--- a/design.html
+++ b/design.html
@@ -7,8 +7,11 @@
 		<script type="text/javascript" src="./script.js"></script>
 	</head>
 	<body>
-		<div id="bord"></div>
+		<header>テトリス</header>
+		<div id="bord">
+		</div>
 		<div id = "startbtn"><p>スタート</p></div>
 		<div id = "stopbtn"><p>ストップ</p></div>
+		<div id="nextmino">
 	</body>
 </html>
