--- a/design.html
+++ b/design.html
@@ -13,5 +13,6 @@
 		<div id = "startbtn"><p>スタート</p></div>
 		<div id = "stopbtn"><p>ストップ</p></div>
 		<div id="nextmino">
+		<div id="gamestatus">待機中</div>
 	</body>
 </html>
