--- a/myLib/index.html
+++ b/myLib/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="./style.css">
 		<script src="jquery-3.5.1.min.js"></script>
 		<script type = "text/javascript" src="myJsDevLiv.js"></script>
+		<script type = "text/javascript" src="myJsDevLivTest.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	</head>
 	<body>
