class選択関数追加

--- a/myLib/index.html
+++ b/myLib/index.html
@@ -11,6 +11,11 @@
 	<body>
 		<p id="test"></p>
 		<p id="test2">domテスト</p>
+		<div>
+			<p class="classTest">test1</p>
+			<p class="classTest">test2</p>
+			<p class="classTest">test3</p>
+		</div>
 	</body>
 </html>
 
